# cross-ios

./: .gitignore  CMakeLists.txt  Config.xcconfig  Info.plist  README.md
Assets.xcassets/MenuClose.imageset/: Contents.json
Script/: OpenSSL.sh  Prebuilt.sh
cross/: AppDelegate.swift  BridgeCore.cpp  BridgeCore.h  ImageView.swift  Info.plist  Prebuilt.sh  RootController.swift  ViewController.swift  WebView.swift
cross.xcodeproj/: project.pbxproj
cross.xcodeproj/xcshareddata/xcschemes/: cross.xcscheme
cross/Assets.xcassets/AppIcon.appiconset/: Contents.json
cross/Assets.xcassets/LaunchImage.launchimage/: Contents.json
cross/Assets.xcassets/MenuClose.imageset/: Contents.json
cross/Assets.xcassets/MenuMore.imageset/: Contents.json
cross/Base.lproj/: Main.storyboard
src/: BridgeCore.cpp  BridgeCore.h  CrossUIApp.swift  CrossUIView.swift  ImageView.swift  WebView.swift
